# upower

./: HACKING  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  devkit-power-gobject.pc.in  upower-glib.pc.in
debian/: README.source  changelog  control  copyright  libdevkit-power-gobject-dev.install  libdevkit-power-gobject1.install  libdevkit-power-gobject1.symbols  libupower-glib-dev.install  libupower-glib1.symbols  rules  upower.install  watch
devkit-power-gobject/: Makefile.am  Makefile.in  devicekit-power.h  dkp-client.c  dkp-device.c  dkp-device.h  dkp-enum.c  dkp-enum.h  dkp-history-obj.c  dkp-history-obj.h  dkp-qos-obj.c  dkp-stats-obj.c  dkp-version.h  dkp-version.h.in  dkp-wakeups-obj.c  dkp-wakeups-obj.h  dkp-wakeups.c  up-client.h  up-qos-obj.h  up-stats-obj.h  up-wakeups-obj.h  up-wakeups.h
doc/: Makefile.am  Makefile.in  UPower-sections.txt  UPower.types  upower-docs.xml
doc/dbus/: Makefile.am  Makefile.in  org.freedesktop.UPower.Device.ref.xml  org.freedesktop.UPower.QoS.ref.xml  org.freedesktop.UPower.ref.xml
doc/html/: Device.html  QoS.html  UPower-up-client.html  UPower-up-device.html  UPower-up-history-item.html  UPower-up-qos-item.html  UPower-up-stats-item.html  UPower-up-types.html  UPower-up-wakeup-item.html  UPower.7.html  UPower.devhelp  UPower.devhelp2  UPower.html  index.html  index.sgml  ix01.html  libupower-glib-helpers.html  libupower-glib.html  license.html  ref-dbus.html  tools-fileformats.html  upower.1.html  upowerd.8.html
doc/man/: Makefile.am  Makefile.in  upower.xml
etc/: Makefile.am  Makefile.in  UPower.conf
libupower-glib/: Makefile.am  Makefile.in  UPowerGlib-1.0.gir  up-client.c  up-client.h  up-device.c  up-device.h  up-history-item.c  up-qos-item.c  up-qos-item.h  up-stats-item.c  up-types.c  up-types.h  up-version.h  up-wakeup-item.c  up-wakeups.c  upower.h
po/: LINGUAS  POTFILES.in  POTFILES.skip
policy/: Makefile.am  Makefile.in  org.freedesktop.upower.policy.in  org.freedesktop.upower.qos.policy.in
rules/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  org.freedesktop.UPower.QoS.xml  org.freedesktop.UPower.Wakeups.xml  org.freedesktop.UPower.conf.in  org.freedesktop.UPower.service.in  up-backend.h  up-daemon-glue.h  up-daemon.c  up-daemon.h  up-device-glue.h  up-device-list.c  up-device.c  up-device.h  up-history.c  up-history.h  up-main.c  up-marshal.c  up-polkit.c  up-polkit.h  up-qos-glue.h  up-qos.c  up-qos.h  up-self-test.c  up-wakeups-glue.h  up-wakeups.c
src/dummy/: Makefile.am  Makefile.in  up-backend.c
src/freebsd/: Makefile.am  Makefile.in  up-backend.c  up-devd.c  up-device-supply.c  up-util.c
src/linux/: Makefile.am  Makefile.in  sysfs-utils.c  sysfs-utils.h  up-backend.c  up-device-csr.c  up-device-hid.c  up-device-idevice.c  up-device-supply.c  up-device-wup.c  up-input.c  up-native.c
tools/: Makefile.am  Makefile.in  up-tool.c
